# OpenCNN

./: .bazelrc  .clang-format  .travis.yml  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  WORKSPACE  readme.md
.github/workflows/: run-cmake.yml
cmake/: compiler-flags.cmake  cpplint.cmake  gflags.cmake  glog.cmake  googletest.cmake  lint.cmake  paths.cmake  protobuf.cmake
cnn/: CMakeLists.txt  workspace.bzl
cnn/array/: BUILD.bazel  array.cc  array.h  array_math.h  test_array.cc  test_array_math.cc
cnn/autodiff/: BUILD.bazel  CMakeLists.txt  jet.h  memory_pool.h  memory_pool_test.cc  test_jet.cc
cnn/layers/: BUILD.bazel  full_connected_layer.cc  full_connected_layer.h  layer.cc  layer.h  test_full_connected_layer.cc  test_layer.cc
cnn/proto/: BUILD.bazel  cnn.proto
cnn/utils/: BUILD.bazel  rng.cc  rng.h  test_rng.cc
doc/: Doxyfile  github-actions-notes.md  run-doxygen.sh
examples/: CMakeLists.txt
examples/linear_regression/: CMakeLists.txt  main.cpp  model.prototxt  optimizer.prototxt
examples/logistic_regression/: CMakeLists.txt  main.cpp  model.prototxt  optimizer.prototxt  trained.prototxt
examples/logistic_regression/data/: gnuplot-notes.md  plot1.gp
examples/mnist/: CMakeLists.txt  main.cpp  model.prototxt  model_for_deploy.prototxt  model_for_train.prototxt  model_for_train.prototxt2  optimizer.prototxt
examples/mnist/data/: download_and_unzip_data.sh
include/cnn/: array.hpp  array_math.hpp  batch_normalization_layer.hpp  common.hpp  convolution_layer.hpp  drop_out_layer.hpp  full_connected_layer.hpp  input_layer.hpp  io.hpp  jet.hpp  l2_loss_layer.hpp  layer.hpp  leaky_relu_layer.hpp  log_loss_layer.hpp  max_pooling_layer.hpp  network.hpp  optimizer.hpp  relu_layer.hpp  rng.hpp  softmax_layer.hpp  softmax_with_log_loss_layer.hpp
proto/: CMakeLists.txt  cnn.proto  model.prototxt  optimizer.prototxt  trained.prototxt
scripts/: check_style_cpplint.sh  cpp_lint.py
src/: array.cpp  array_math.cpp  batch_normalization_layer.cpp  convolution_layer.cpp  drop_out_layer.cpp  full_connected_layer.cpp  input_layer.cpp  io.cpp  l2_loss_layer.cpp  layer.cpp  leaky_relu_layer.cpp  log_loss_layer.cpp  max_pooling_layer.cpp  network.cpp  optimizer.cpp  relu_layer.cpp  rng.cpp  softmax_layer.cpp  softmax_with_log_loss_layer.cpp
test/: CMakeLists.txt  test_array.cpp  test_array_math.cpp  test_batch_normalization_layer.cpp  test_convolution_layer.cpp  test_drop_out_layer.cpp  test_full_connected_layer.cpp  test_input_layer.cpp  test_io.cpp  test_jet.cpp  test_l2_loss_layer.cpp  test_layer.cpp  test_leaky_relu_layer.cpp  test_log_loss_layer.cpp  test_main.cpp  test_max_pooling_layer.cpp  test_network.cpp  test_optimizer.cpp  test_relu_layer.cpp  test_rng.cpp  test_softmax_layer.cpp  test_softmax_with_log_loss_layer.cpp
test/gtest/: CMakeLists.txt  readme.md
tools/: CMakeLists.txt  cnn.cpp
tools/lint/: BUILD.bazel  cpplint.bzl  readme.md
travis/: install-bazel.sh  mnist-test.sh  script.sh
