# Copyright 2019. All Rights Reserved.
# Author: csukuangfj@gmail.com (Fangjun Kuang)

package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")

cc_proto_library(
    name = "cnn_cc_proto",
    deps = [":cnn_proto"],
)

proto_library(
    name = "cnn_proto",
    srcs = ["cnn.proto"],
)
