# Copyright 2019. All Rights Reserved.
# Author: csukuangfj@gmail.com (Fangjun Kuang)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rng",
    srcs = ["rng.cc"],
    hdrs = ["rng.h"],
    deps = [
        "//cnn/array",
        "@com_google_glog//:glog",
    ],
)

cc_test(
    name = "test_rng",
    srcs = ["test_rng.cc"],
    deps = [
        ":rng",
        "@com_google_googletest//:gtest_main",
    ],
)
